force-app/main/default/objects/CallRecords__c/CallRecords__c.object-meta.xml
<CustomObject>
    <label>Call Record</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Call Records Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>