force-app/main/default/objects/CallRecords__c/fields/CallBackDate__c.field-meta.xml
<CustomField>
    <fullName>CallBackDate__c</fullName>
    <label>CallBackDate</label>
    <type>Date</type>
</CustomField>