force-app/main/default/objects/CallRecords__c/fields/CallBackTime__c.field-meta.xml
<CustomField>
    <fullName>CallBackTime__c</fullName>
    <label>CallBackTime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8 AM</fullName>
            </value>
            <value>
                <fullName>9 AM</fullName>
            </value>
            <value>
                <fullName>10 AM</fullName>
            </value>
            <value>
                <fullName>11 AM</fullName>
            </value>
            <value>
                <fullName>12 PM</fullName>
            </value>
            <value>
                <fullName>1 PM</fullName>
            </value>
            <value>
                <fullName>2 PM</fullName>
            </value>
            <value>
                <fullName>3 PM</fullName>
            </value>
            <value>
                <fullName>4 PM</fullName>
            </value>
            <value>
                <fullName>5 PM</fullName>
            </value>
            <value>
                <fullName>6 PM</fullName>
            </value>
            <value>
                <fullName>7 PM</fullName>
            </value>
            <value>
                <fullName>8 PM</fullName>
            </value>
            <value>
                <fullName>9 PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>