force-app/main/default/objects/CallRecords__c/fields/CallBackUser__c.field-meta.xml
<CustomField>
    <fullName>CallBackUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Back User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Call_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>