force-app/main/default/objects/CallRecords__c/fields/CallDisposition__c.field-meta.xml
<CustomField>
    <fullName>CallDisposition__c</fullName>
    <label>Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment set</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Wrong number</fullName>
            </value>
            <value>
                <fullName>Has provider</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Call back</fullName>
            </value>
            <value>
                <fullName>Answering machine</fullName>
            </value>
            <value>
                <fullName>QC Call</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>No English</fullName>
            </value>
            <value>
                <fullName>Not home owner</fullName>
            </value>
            <value>
                <fullName>Person’s work phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>