force-app/main/default/objects/CallRecords__c/fields/ContactedDisposition__c.field-meta.xml
<CustomField>
    <fullName>ContactedDisposition__c</fullName>
    <label>Contacted Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>