force-app/main/default/objects/CallRecords__c/fields/User_Address__c.field-meta.xml
<CustomField>
    <fullName>User_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Address</label>
    <referenceTo>User_Address__c</referenceTo>
    <relationshipLabel>Call Records</relationshipLabel>
    <relationshipName>Call_Records</relationshipName>
    <type>Lookup</type>
</CustomField>