force-app/main/default/objects/CallRecords__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsProcessed__c</columns>
    <columns>CallDisposition__c</columns>
    <columns>User_Address__c</columns>
    <columns>Account__c</columns>
    <columns>Agent_Email__c</columns>
    <columns>CallCenterCampaign__c</columns>
    <columns>Duration__c</columns>
    <columns>User__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>